syntax = "proto3";
package sf.xrpl.type.v1;

option go_package = "github.com/xrpl-commons/firehose-xrpl/pb/sf/xrpl/type/v1;pbxrpl";

// AccountSet - Modifies account settings
// Reference: https://xrpl.org/accountset.html
message AccountSet {
  // Flag to enable
  uint32 set_flag = 1;

  // Flag to disable
  uint32 clear_flag = 2;

  // (Optional) Domain associated with account (hex-encoded)
  string domain = 3;

  // (Optional) MD5 hash of email for Gravatar
  string email_hash = 4;

  // (Optional) Public key for encrypted messaging
  string message_key = 5;

  // (Optional) Transfer rate for issued currencies (1e9 = 100%)
  uint32 transfer_rate = 6;

  // (Optional) Tick size for offers
  uint32 tick_size = 7;

  // (Optional) NFT minter account
  string nftoken_minter = 8;

  // (Optional) Arbitrary 256-bit value stored with the account
  string wallet_locator = 9;

  // (Optional) Not used - valid but has no effect
  uint32 wallet_size = 10;
}

// AccountDelete - Deletes an account
// Reference: https://xrpl.org/accountdelete.html
message AccountDelete {
  // Destination for remaining XRP
  string destination = 1;

  // (Optional) Destination tag
  uint32 destination_tag = 2;

  // (Optional) Set of Credentials to authorize deposit (array of ledger entry IDs)
  repeated string credential_ids = 3;
}

// SetRegularKey - Sets or clears an account's regular key
// Reference: https://xrpl.org/setregularkey.html
message SetRegularKey {
  // Regular key to set (omit to remove)
  string regular_key = 1;
}

// SignerListSet - Modifies multi-signing settings
// Reference: https://xrpl.org/signerlistset.html
message SignerListSet {
  // Quorum required for multi-signing
  uint32 signer_quorum = 1;

  // List of signers
  repeated SignerEntry signer_entries = 2;
}

message SignerEntry {
  // XRP Ledger address whose signature contributes to multi-signature
  string account = 1;

  // Weight of a signature from this signer (UInt16)
  uint32 signer_weight = 2;

  // (Optional) Arbitrary hexadecimal data to identify the signer
  string wallet_locator = 3;
}
