syntax = "proto3";
package sf.xrpl.type.v1;

option go_package = "github.com/xrpl-commons/firehose-xrpl/pb/sf/xrpl/type/v1;pbxrpl";

import "sf/xrpl/type/v1/amount.proto";

// OfferCreate - Places an order on the DEX
// Reference: https://xrpl.org/offercreate.html
message OfferCreate {
  // What the offer creator will pay (what taker gets)
  Amount taker_gets = 1;

  // What the offer creator will receive (what taker pays)
  Amount taker_pays = 2;

  // (Optional) Time after which offer expires (seconds since Ripple epoch)
  uint32 expiration = 3;

  // (Optional) Offer sequence to replace
  uint32 offer_sequence = 4;
}

// OfferCancel - Cancels an existing offer
// Reference: https://xrpl.org/offercancel.html
message OfferCancel {
  // Sequence number of the offer to cancel
  uint32 offer_sequence = 1;
}
